@startuml class-diagram

title Noviaal Class Diagram

Note -- User

class User {
  - UUID     id
  - String   email
  - String   password
  - String   name
  - Boolean  enabled
  - Date     born
  - Role     role
  - DateTime since
}

enum Role {
  USER
  ADMIN
  REPORTER
}

User -- Role

abstract class BaseItem {
  - UUID id
  - DateTime created
  - DateTime updated
}

together {
  class Note extends BaseItem {
    - String title
    - String body
  }

  class Media extends BaseItem {
    - Binary foto
    - String name
    - String contentType
    - Long size
  }

  class Bookmark extends BaseItem {
    - String title
    - URL url
    - String remark
  }
}

class Reminder {
  - DateTime when
  - DateTime created
  - String reason
}
BaseItem -- Reminder
Reminder -- User

class Like {
  - DateTime created
  - String reason
}
BaseItem -- Like
Like -- User

class Follow {
  - DateTime since
  - DateTime created
  - String   reason
}
User -- Follow
Follow -- User

class Tag {
  - String name
}
BaseItem -- Tag

class Comment {
  - DateTime created
  - String comment
  - Integer stars
}
BaseItem -- Comment
User -- Comment

@enduml
